[gd_scene load_steps=7 format=2]

[ext_resource path="res://Prepare/Prepare.gd" type="Script" id=1]
[ext_resource path="res://title_screen/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://title_screen/TitleLabel.gd" type="Script" id=3]
[ext_resource path="res://anim/fade_in/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://title_screen/buttons/BattleButton.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 30
font_data = ExtResource( 2 )

[node name="Prepare" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = 2.33276
margin_right = 1282.33
margin_bottom = 717.0
color = Color( 0.788235, 0.439216, 0.643137, 1 )

[node name="VersionLabel2" type="Label" parent="."]
margin_left = 289.979
margin_top = 38.4142
margin_right = 976.979
margin_bottom = 137.414
size_flags_vertical = 10
size_flags_stretch_ratio = 1.01
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.215686, 0.0705882, 1 )
custom_colors/font_color_shadow = Color( 0, 0.756863, 0.294118, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "PYOKIMON"
script = ExtResource( 3 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 320.0
margin_top = 150.0
margin_right = 1828.0
margin_bottom = 1289.0
rect_scale = Vector2( 0.4, 0.4 )
custom_constants/separation = 20
alignment = 1

[node name="FrogSpotRow1" type="HBoxContainer" parent="Menu"]
margin_right = 1508.0
margin_bottom = 559.0
size_flags_vertical = 3
alignment = 1

[node name="FrogSpotRow2" type="HBoxContainer" parent="Menu"]
margin_top = 579.0
margin_right = 1508.0
margin_bottom = 1139.0
size_flags_vertical = 3
alignment = 1

[node name="FadeIn" parent="." instance=ExtResource( 4 )]

[node name="BattleButton" parent="." instance=ExtResource( 5 )]
margin_left = 886.076
margin_top = 625.879
margin_right = 1246.08
margin_bottom = 685.879
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
